infographic typos fixed

--- a/presentation/BYOOSC/index.html
+++ b/presentation/BYOOSC/index.html
@@ -18,16 +18,15 @@
 <body>
   <div class="reveal">
     <div class="slides">
-      <section class='' data-state='frankfurt' id='slide-1'>
+      <section class='' data-state='main' id='slide-1'>
   
   <!-- title slide -->
 
-<p style="color: #13DAEC; font-family: 'Lato', sans-serif; font-size: 180%; margin: 0 0 25% 0;">
+<p style="color: #13DAEC; font-family: 'Lato', sans-serif; font-size: 170%; margin: -5% 0 25% 0;">
   Build Your Own Offshore Company <br />
-  <span style="font-size: 80%;"></span>
 </p>
 
-<p style="font-size: 130%; color: #ffffff;">
+<p style="font-size: 130%; color: #ffffff; margin: 0 0 5% 0;">
   Mission Economy Hackathon <br/ >
   Düsseldorf 2016
 </p>
@@ -41,22 +40,35 @@
 </style>
 
 <style>
-html.frankfurt body {
-background:url("./assets/img/panama-papers.jpg");
-background-position:center;
+html.main body {
+background:url("./assets/img/offshore.jpg");
+background-position: center;
 background-size: 100%;
 background-repeat: no-repeat;
 background-color: #35383b;
 } 
 </style>
 
-<!-- image credit: https://www.flickr.com/photos/friedrichs/14260935259/ -->
-
-<h2>asdf</h2>
-
-<ul>
+</section>
+<section class='' data-state='' id='slide-2'>
+  <h2>asdf</h2>
+  <ul>
 <li>asdf</li>
 </ul>
+
+</section>
+<section class='' data-state='' id='custbg'>
+  <h2>Slide with custom background</h2>
+  <style>
+#custbg {
+  background-image:url("./assets/img/offshore.jpg"); 
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+}
+</style>
+
+<p>asdf</p>
 
 </section>
     </div>
